# racecard

./: .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  Pipfile  README.md  runme  setup.cfg  setup.py
docs/: player_state.uxf
racecard/app/: __init__.py  simplecli.py
racecard/client/: __init__.py  base.py  localclient.py
racecard/core/: __init__.py  deck.py  exceptions.py  game.py  hand.py  player.py  playerstate.py  scoring.py  tray.py
racecard/server/: __init__.py  base.py  localserver.py
racecard/server/rest/: __init__.py  app.py  exceptions.py  store.py
racecard/server/rest/api/: games.py
racecard/server/rest/models/: base.py  common.py  game.py  user.py
racecard/server/rest/openapi/: common.yaml  game.yaml  gamesList.yaml  jsonapi_oas3.yaml  openapi.yaml  user.yaml  userList.yaml
racecard/server/rest/openapi/_jsonapi_source/: jsonapi_oas3.json  jsonapi_oas3.yaml
racecard/server/rest/resources/: __init__.py  common.py  games.py  users.py
racecard/server/rest/schemas/: baseschema.py  common.py  fields.py  gameschema.py  userschema.py
src/racecard/: __init__.py  __main__.py
src/racecard/app/: simplecli.py
src/racecard/core/: common.py  config.py  exceptions.py  game.py  hand.py  player.py
src/racecard/server/: __init__.py  common.py
src/racecard/server/rest/: __init__.py  app.py  exceptions.py  store.py
src/racecard/server/rest/models/: __init__.py  common.py  game.py  user.py
src/racecard/server/rest/openapi/: common.yaml  game.yaml  openapi.yaml
src/racecard/server/rest/resources/: common.py  games.py  users.py
src/racecard/server/rest/schemas/: __init__.py  common.py  fields.py  gameschema.py  userschema.py
(+2 files in other folders)
