[metadata]
name = racecard
version = 0.0.1
description = Race Card: An implementation of the game card game Mille Bornes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = game, card, cli, mille, bornes
url = https://github.com/justkrys/racecard
author = Krys Lawrence
author_email = code@krys.ca
license = GNU AGPLv3+
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Topic :: Games/Entertainment
project_urls =
#    Documentation =
    Source = https://github.com/justkrys/racecard
    Tracker = https://github.com/justkrys/racecard/issues

[options]
packages = find:
package_dir = = src
zip_safe = False
python_requires = >= 3.8
setup_requires =
    setuptools ~= 46.0
    wheel ~= 0.34

[options.packages.find]
where = src

[options.package_data]
racecard.server.rest = openapi/*.yaml

[options.extras_require]
REST =
    connexion[swagger-ui] ~= 2.6
    Flask ~= 1.1
    python-dotenv ~= 0.13
    jsonschema[format] ~= 3.2
    marshmallow-jsonapi ~= 0.23
    prance ~= 0.18
    click ~= 7.1

[options.entry_points]
console_scripts =
    racecard = racecard.__main__:main

[flake8]
max-line-length = 80
max-complexity = 12
select = C,E,F,W,B,B9
ignore = E203, E501, W503
exclude=.venv

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=**/*.py
ignore_missing_imports=true
